<resources>
    <string name="app_name">Vimeo Api</string>
    <string name="search_video">Search Video</string>
    <string name="no_item">No item.</string>
    <string name="invalid_input">Text is too short.</string>
    <string name="video">Video</string>
    <string name="no_data">No Data.</string>
    <string name="pictures">Pictures</string>
    <string name="comments">Comments</string>
    <string name="no_comment">No Comment.</string>
</resources>
