<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appPagesRootStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:padding="16dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/video"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_textSize"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/videoPlayer"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/lblPictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pictures"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/large_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoPlayer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPictures"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPictures" />

    <TextView
        android:id="@+id/lblComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/comments"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/large_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvPictures" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblComments" />

    <TextView
        android:id="@+id/tvNoComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_comment"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/small_textSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvComments"
        app:layout_constraintEnd_toEndOf="@id/rvComments"
        app:layout_constraintStart_toStartOf="@id/rvComments"
        app:layout_constraintTop_toTopOf="@id/rvComments" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_textSize"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRetry" />

    <ImageView
        android:id="@+id/btnRetry"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:tint="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_retry" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="videoPlayer,rvComments,rvPictures,lblComments,lblPictures" />

</androidx.constraintlayout.widget.ConstraintLayout>